# django-recipes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/app/templates/: base.html
app/recipes/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
app/recipes/fixtures/: recipes_with_ingredients.json
app/recipes/migrations/: 0001_initial.py  0002_auto_20211030_2252.py  0003_alter_recipeingredients_amount.py
app/recipes/templates/: recipe-detailed.html  recipes-list.html
